changed home name

--- a/jsdocs/global.html
+++ b/jsdocs/global.html
@@ -609,7 +609,7 @@
 </div>
 
 <nav>
-    <h2><a href="index.html">ErrorHub Docs</a></h2><h3>Tutorials</h3><ul><li><a href="tutorial-tutorial.html">tutorial</a></li></ul><h3>Global</h3><ul><li><a href="global.html#calculateTax">calculateTax</a></li><li><a href="global.html#numbers">numbers</a></li><li><a href="global.html#studentName">studentName</a></li><li><a href="global.html#studentPLay">studentPLay</a></li><li><a href="global.html#todo">todo</a></li></ul>
+    <h2><a href="index.html">Home</a></h2><h3>Tutorials</h3><ul><li><a href="tutorial-tutorial.html">tutorial</a></li></ul><h3>Global</h3><ul><li><a href="global.html#calculateTax">calculateTax</a></li><li><a href="global.html#numbers">numbers</a></li><li><a href="global.html#studentName">studentName</a></li><li><a href="global.html#studentPLay">studentPLay</a></li><li><a href="global.html#todo">todo</a></li></ul>
 </nav>
 
 <br class="clear">
