--- a/jsdocs/index.html
+++ b/jsdocs/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>ErrorHub Docs</title>
+    <title>ErrorHub: Home</title>
 
     <script src="scripts/prettify/prettify.js"> </script>
     <script src="scripts/prettify/lang-css.js"> </script>
